feat: new endpoint GetUserGameById
