# controllers/add_controllers.go
@@ -38,6 +38,7 @@ func DefineControllers(handlers *handlers.Handlers, server *gin.Engine) {
 		authorized.PUT("/user/profile", controllers.UserController.UpdateUserProfileDetails)
 		authorized.POST("/user/games", controllers.UserController.AddGameToUser)
 		authorized.GET("/user/games", controllers.UserController.GetUserGames)
+		authorized.GET("/user/games/:gameId", controllers.UserController.GetUserGameById)
 		authorized.PUT("/user/games/:gameId", controllers.UserController.UpdateGameToUser)
 		authorized.DELETE("/user/games/:gameId", controllers.UserController.DeleteGameToUser)
 	}
